--- a/assets/css/christmas-css.css
+++ b/assets/css/christmas-css.css
@@ -9,16 +9,16 @@ body {
 
 
 h1 {
-  color: #ff0000;
-  text-shadow: 0 0 10px #003cff, 0 0 20px #0066ff, 0 0 30px #0064e6;
+  color: #ffffff;
+  text-shadow: 0 0 10px #1caa5a, 0 0 20px #1cb25d, 0 0 30px #20b560;
 
 
 }
 
 p {
   font-size: 25px;
-  color: #ff0000;
-  text-shadow: 0 0 10px #003cff, 0 0 20px #0066ff, 0 0 30px #0064e6;
+  color: #ffffff;
+  text-shadow: 0 0 10px #1caa5a, 0 0 20px #1cb25d, 0 0 30px #20b560;
 
   
 
@@ -26,7 +26,7 @@ p {
 
 p:hover.link {
   color: #1eff00;
-  text-shadow: 0 0 10px #1eff00, 0 0 20px #37ff00, 0 0 30px #0ce600, 0 0 40px #11ee01;
+  text-shadow: 0 0 10px #ff0000, 0 0 20px #ff0000, 0 0 30px #ff0000, 0 0 40px #ff0000;
 
 }
 
@@ -66,13 +66,13 @@ p:hover.link {
 
 
 a {
-    color: #ff0000;
+    color: #ffffff;
     font-size: small;
     background-color: black;
     text-align: center;
     text-decoration: none;
     display: inline-block;
-    border-color: #4400ff;
+    border-color: #ff0000;
     border-style: solid;
     position: relative;
     width: 24%;
@@ -93,13 +93,13 @@ a:hover {
 @keyframes flicker {
     from {
       text-shadow:
-      0 0 5px blue,0 0 10px blue,
-      0 0 20px blue, 0 0 40px blue;
+      0 0 5px lime,0 0 10px lime,
+      0 0 20px lime, 0 0 40px lime;
     }
     to {
       text-shadow:
-      0 0 5px blue, 0 0 10px blue,
-      0 0 20px rgb(0, 183, 255), 0 0 40px rgb(0, 162, 255);
+      0 0 5px lime, 0 0 10px lime,
+      0 0 20px rgb(0, 255, 102), 0 0 40px rgb(0, 255, 85);
     }
   }
   
@@ -110,14 +110,14 @@ a:hover {
   .alert {
     padding: 20px;
       background-color: #000000;
-      color: rgb(9, 255, 0);
+      color: rgb(255, 255, 255);
       margin-bottom: 15px;
       position: fixed;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
       font-size: 18px;
-      border: #1eff00;
+      border: #ff0000;
       border-style: solid;
   }
   
@@ -171,7 +171,7 @@ a:hover {
   position: absolute;
   top: 10px;
   right: 10px;
-  color: lime;
+  color: white;
   font-size: 30px;
   cursor: pointer;
 }
