--- a/assets/css/thanksgiving-css.css
+++ b/assets/css/thanksgiving-css.css
@@ -171,14 +171,14 @@ a:hover {
   position: absolute;
   top: 10px;
   right: 10px;
-  color: brown;
+  color: #a52a2a;
   font-size: 30px;
   cursor: pointer;
 }
 
 /* Change color on mouse-over */
 .closebtn:hover {
-  color: orange;
+  color: #ffa500;
 }
 
 .webApp {
